--- a/index.html
+++ b/index.html
@@ -2,13 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Odin Recipes</title>
+    <title>James Recipes</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <h1>Odin Recipes</h1>
+    <h1>James Recipes</h1>
+    <div>Welcome to James' recipe website, where we display the tastiest foods for your consumption!</div>
+    <p>Dive right into the delicious delights!</p>
     <ul>
      <li><a href="./recipes/lasagna.html">Tasty Italian Lasagna</a></li>
      <li><a href="./recipes/pizza.html">Scandinavian Pizza</a></li>
     </ul>
+    <img src="./cornucopia.jpg" alt="picture of cornocupia">
+    <div class="class-one">Please agree to all terms and conditions. (not really, this is just a test)</div>
+    <div class="class-two">Here's another line to test different CSS styles. I am just writing randomly</div>
+    <div class="class-one subsection"> Here's another little line to test</div>
   </body>
 </html>
