--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -27,6 +27,7 @@
       <li>don't listen to james' advice because he is a terrible cook</li>
       <li>place in the oven at 250 degrees celsisus for 30 minutes</li>
       <li>bon apetit!</p>
-    </ol> 
+    </ol>
+    <a href="../index.html">Go Back</a> 
   </body>
 </html>
