--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <ul>
      <li><a href="./recipes/lasagna.html">Tasty Italian Lasagna</a></li>
      <li><a href="./recipes/pizza.html">Scandinavian Pizza</a></li>
+     <li><a href="./recipes/apple-cake.html">Apple Cake</a></li>
     </ul>
     <img src="./cornucopia.jpg" alt="picture of cornocupia">
     <div class="class-one">Please agree to all terms and conditions. (not really, this is just a test)</div>
